# auditor

./: .gitignore  README.md  auditor.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_cli.py
website_auditor/: __init__.py  cli.py
