[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "website-auditor"
version = "0.1.0"
description = "CLI tool for basic technical and SEO website audits."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
]

[project.scripts]
website-auditor = "website_auditor.cli:main"

[tool.setuptools]
packages = ["website_auditor"]
